<resources>
    <string name="app_name">SCalculator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="returnicon"><![CDATA[<-]]></string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="lg">lg</string>
    <string name="e">e</string>
    <string name="pi">π</string>
    <string name="strYangLao">养老保险金：</string>
    <string name="strYiLiao">医疗保险金：</string>
    <string name="strShiYe">失业保险金：</string>
    <string name="strGongShang">工伤保险金：</string>
    <string name="strShengYu">生育保险金：</string>
    <string name="strZhuFang">住房保险金：</string>
    <string-array name="LengthUnit">
        <item>千米km</item>
        <item>米m</item>
        <item>分米dm</item>
        <item>厘米cm</item>
        <item>毫米mm</item>
        <item>微米um</item>
        <item>纳米nm</item>
    </string-array>
    <string-array name="HouseRepayWay">
        <item>等额本息(每月等额还款)</item>
        <item>等额本金(每月递减还款)</item>
    </string-array>
    <string-array name="SpeedUnit"
        >
        <item>千米/时km/h</item>
        <item>米/秒m/s</item>
        <item>英里/时mph</item>
        <item>海里/时kn</item>
        <item>千米/秒km/s</item>
        <item>光速c</item>
        <item>马赫Ma</item>
        <item>英寸/秒ips</item>
    </string-array>

    <string-array name="TemperatureUnit"
        >
        <item>开尔文K</item>
        <item>摄氏度℃</item>
        <item>华氏度℉</item>
    </string-array>

    <string-array name="WeightUnit">
        <item>微克ug</item>
        <item>毫克mg</item>
        <item>克g</item>
        <item>千克kg</item>
        <item>吨t</item>
        <item>磅lb</item>
        <item>盎司oz</item>
        <item>克拉ct</item>
        <item>打兰dr</item>
        <item>格令gr</item>
        <item>担dan</item>
        <item>钱qian</item>
        <item>两liang</item>
        <item>公担q</item>
        <item>长吨l.t</item>
        <item>短吨sh.t</item>
        <item>英担cwt</item>
        <item>美担cwt</item>
        <item>英石uk.st</item>
    </string-array>

    <string-array name="VolumeUnit">
        <item>立方米m³</item>
        <item>升L</item>
        <item>加仑gal</item>
        <item>立方英尺cf</item>
        <item>公石hl</item>
        <item>立方分米dm³</item>
        <item>立方厘米cm³</item>
        <item>毫升ml</item>
        <item>立方毫米mm³</item>
    </string-array>
    <string-array name="AreaUnit">
        <item>平方米m²</item>
        <item>平方英尺sf</item>
        <item>平方分米dm²</item>
        <item>平方厘米cm²</item>
        <item>平方毫米mm²</item>
        <item>平方码sy</item>
        <item>平方英寸si</item>
        <item>公顷ha</item>
    </string-array>

</resources>
